--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@google-cloud/pubsub": "^0.18.0",
     "jsonwebtoken": "^8.2.1",
-    "mqtt": "^2.17.0"
+    "mqtt": "^2.17.0",
+    "rxjs": "^6.1.0"
   },
   "devDependencies": {
     "@types/google-cloud__pubsub": "^0.14.1",
