--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@google-cloud/pubsub": "^0.18.0",
     "jsonwebtoken": "^8.2.1",
     "mqtt": "^2.17.0",
+    "mqtt-level-store": "^2.0.0",
     "rxjs": "^6.1.0"
   },
   "devDependencies": {
