--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist",
     "build": "tsc",
     "watch:build": "tsc --watch",
-    "watch:server": "nodemon ./dist/messenger.js --watch './dist'",
+    "watch:server": "nodemon --ignore 'datastore/*.*' ./dist/messenger.js --watch './dist'",
     "start": "npm-run-all clean build --parallel watch:build watch:server --print-label"
   },
   "author": "Josh Malouf",
